Update to avoid mobile layout bug

--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -32,7 +32,7 @@
   border: 4px solid white;
   border-right-style: hidden;
   padding: 5rem 3rem;
-  margin-left: 10rem;
+  margin-left: 10rem !important;
   background: linear-gradient(to top, white 30%, transparent 20%, transparent 70%, white 70%) no-repeat;
   background-size: 4px 100%;
   background-position: 100% 0;
